# Notary

./: .gitignore  CONTACT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: __init__.py  runner.py  scoring.py
examples/: sample_memory.json
notary/: __init__.py  spec.py
results/: digitizer-production.json
tests/: gaming_vector.json  test_scoring.py
