[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notary-bench"
version = "0.1.0"
description = "Governance benchmark for multi-agent memory systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agents", "memory", "governance", "benchmark", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
notary = "benchmark.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["notary", "benchmark"]
